--- a/manifest.json
+++ b/manifest.json
@@ -23,7 +23,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "/?source=pwa",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
