--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.2",
     "fetch-mock": "^9.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,6 +14,7 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.4.2",
     "tachyons": "^4.12.0",
     "web-vitals": "^2.1.4",
@@ -37,13 +36,8 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "jest": {
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
   },
   "eslintConfig": {
     "extends": [
@@ -64,6 +58,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^4.0.0"
+    "gh-pages": "^4.0.0",
+    "react-test-renderer": "^18.2.0"
   }
 }
